--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-addons-css-transition-group": "^15.3.1",
     "react-css-themr": "^1.3.0",
     "react-dom": "^15.3.1",
+    "react-transform-hmr": "^1.0.4",
     "redbox-react": "^1.3.0"
   },
   "devDependencies": {
