--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "avam-material",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "ReactJS Material UI",
   "main": "./lib",
   "scripts": {
@@ -22,13 +22,15 @@
   "homepage": "https://github.com/vickykatoch/avam-material#readme",
   "dependencies": {
     "classnames": "^2.2.5",
+    "immutability-helper": "^2.0.0",
     "normalize.css": "^4.2.0",
     "react": "^15.3.1",
     "react-addons-css-transition-group": "^15.3.1",
     "react-css-themr": "^1.3.0",
     "react-dom": "^15.3.1",
     "react-transform-hmr": "^1.0.4",
-    "redbox-react": "^1.3.0"
+    "redbox-react": "^1.3.0",
+    "react-transform-catch-errors": "^1.0.2"
   },
   "devDependencies": {
     "babel-cli": "^6.14.0",
@@ -43,7 +45,6 @@
     "css-loader": "^0.24.0",
     "node-sass": "^3.8.0",
     "postcss-loader": "^0.11.1",
-    "react-transform-catch-errors": "^1.0.2",
     "rimraf": "^2.5.4",
     "sass-loader": "^4.0.1",
     "style-loader": "^0.13.1",
