--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "url": "git+https://github.com/vickykatoch/avam-material.git"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Balwinder Katoch",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/vickykatoch/avam-material/issues"
   },
